# thermal_editor

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: compress_test.launch
src/: correct_distortion_cpp.cpp  feature_imager.cpp  maxinvest.cpp  thermal_compressed.cpp  thermal_distortion.cpp  thermal_editor.cpp  thermal_editor_old.cpp  thermal_editor_tmp.cpp  thermal_feature_extractor.cpp  thermal_image_EQhistgram.cpp  thermal_image_divider.cpp  thermal_imager.cpp  thermal_imagetype.cpp  thermal_photo.cpp  thermal_threshold.cpp  usb_pub.cpp
